=======
HISTORY
=======

1.1.11 (unreleased)
-------------------

- Nothing changed yet.


1.1.10 (2011-05-12)
-------------------

- Add a CSS class to the `Edit without visual editor` note.
  [hannosch]

- Avoid determining content type as text/plain on Dexterity add views.
  [davisagli]

- In the link "Edit without visual editor", append existing url-parameters.
  Fixes https://dev.plone.org/plone/ticket/11632
  [WouterVH]

1.1.9 (2011-04-02)
------------------

- Don't acquire when determining the mimetype of the field being edited.
  [davisagli]


1.1.8 (2011-02-24)
------------------

- Suppress the WYSIWYG editor for fields whose text format is not HTML, and
  provide a "Edit without visual editor" link like kupu did so that the format
  can be switched from HTML to something else.
  [davisagli]

- Fix wysiwyg_support to correctly respect a user's preference to use no
  wysiwyg editor.
  [davisagli]

- Updated Norwegian translations.
  [mj]


1.1.7 (2011-02-10)
------------------

- Add tests to make sure user can switch between editors using
  personalize_form
  [msmith64]

- Merged test fixes from
  http://dev.plone.org/collective/changeset/226086/Products.TinyMCE/branches/plip9938-output-filters
  to fix Plone 3 compatibility test failure.
  [msmith64]

- Fixed tests that were failing due to unpredictable dict key order.
  [msmith64]

- Allow users to choose to have no WYSIWYG editor.
  Fixes http://dev.plone.org/plone/ticket/10810
  [msmith64]

- Do not crash when getting a configuration with styles that have an
  empty line at the end.
  [maurits]

- Make sure that tinymce-jsonconfiguration is traversed as a view in
  tinymce_wysiwyg_support.pt.
  [davisagli]

- transform now handles resolveuid/12345/subobject links correctly.
  This fixes https://dev.plone.org/plone/ticket/11426
  [fRiSi]

1.1.6 (2011-01-04)
------------------

- Fix capitalization of the title of the content_css setting. This fixes
  http://dev.plone.org/plone/ticket/10792.